[spring boot] 레시피 등록 기능 추가 완료 _ 남은 부분 -> 성공 실패  메시지, 저장 시 저장 하시겠습니까? 공통 팝업 페이지 , 저장 시 벨리데이션 체크

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,12 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <title layout:title-pattern="$DECORATOR_TITLE - ALAN 레시피">ALAN 레시피</title>
+    <title layout:title-pattern="ALAN 레시피">ALAN 레시피</title>
     <th:block th:replace="fragments/head :: commonHead"></th:block> <!-- 공통 CSS/JS -->
 </head>
 <body>
 <div id="wrap">
 <header th:replace="fragments/navigation :: navigation"></header> <!-- 공통 메뉴 -->
+
+    <!-- 메시지 팝업 영역: 모든 페이지에서 이 레이아웃을 쓰면 자동으로 찍힙니다. -->
+<div th:replace="fragments/messagePopup :: messagePopup"></div>
+
 <main layout:fragment="content">
     <!-- 개별 페이지 콘텐츠가 여기 들어감 -->
 </main>
