[spring boot] 레시피 단순 리스트 조회 페이징 처리 완료

--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -10,13 +10,13 @@
             <dd class="depth2">
                 <ul class="depth2_lst">
                     <li>
-                        <a th:href="@{/}">
+                        <a th:href="@{/recipe/list}">
                             <i class="ico_24 reci_modi"></i>
                             <span>레시피 목록</span>
                         </a>
                     </li>
                     <li>
-                        <a th:href="@{/recipe/recipeBoardWrite}">
+                        <a th:href="@{/recipe/form}">
                             <i class="ico_24 reci_upload"></i>
                             <span>레시피 등록</span>
                         </a>
