--- a/src/main/resources/templates/recipe/recipeForm.html
+++ b/src/main/resources/templates/recipe/recipeForm.html
@@ -74,30 +74,55 @@
         <div class="card_desc"><i class="ico_info_circle ico_24"></i><p>재료가 남거나 부족하지 않도록 정확한 계량정보를 적어주세요.</p></div>
         <div id="test">
           <ul class="material_wrap" id="material_wrap">
-              <li class="material_inner" th:each="entry : ${recipeForm.ingredientGroupMap}">
-                <div class="input_group input_area material_tit">
-                  <input type="text" name="recipeEtc" class="input_text" th:value="${entry.key}" placeholder="재료 묶음 이름" />
-                  <button type="button" class="btn btn_sm btn_secondary mat_innr_minus" onclick="deleteListWrap(this)">
-                    <i class="ico_del white ico_24"></i>재료/양념 묶음 삭제
+
+            <li class="material_inner" th:if="${#lists.isEmpty(recipeForm.ingredientGroupMap)}">
+              <div class="input_group input_area material_tit">
+                <input type="text" name="recipeEtc" class="input_text" value="" placeholder="재료 묶음 이름">
+                <button type="button" class="btn btn_sm btn_secondary mat_innr_minus" onclick="deleteListWrap(this)">
+                  <i class="ico_del white ico_24"></i>재료/양념 묶음 삭제
+                </button>
+              </div>
+              <div class="material_lst_wrap">
+                <ul class="material_lst">
+                  <li>
+                    <input type="text" name="recipeEtcIngredient" class="input_text" placeholder="예) 돼지고기">
+                    <input type="text" name="recipeEtcQuantity" class="input_text" placeholder="예) 300g">
+                    <button type="button" class="btn btn_md btn_secondary btn_radius btn_icon material_lst_del" onclick="deleteList(this)">
+                      <i class="ico_del white ico_24"></i>
+                    </button>
+                  </li>
+                </ul>
+                <div class="lst_plus_wrap">
+                  <button type="button" class="btn btn_md btn_border btn_icon mat_lst_plus" onclick="addList(this)">
+                    <i class="ico_add black ico_24"></i>
                   </button>
                 </div>
-                <div class="material_lst_wrap">
-                  <ul class="material_lst">
-                    <li th:each="ingredient : ${entry.value}">
-                      <input type="text" name="recipeEtcIngredient" class="input_text" th:value="${ingredient.ingredientName}" placeholder="예) 돼지고기" />
-                      <input type="text" name="recipeEtcQuantity" class="input_text" th:value="${ingredient.quantity}" placeholder="예) 300g" />
-                      <button type="button" class="btn btn_md btn_secondary btn_radius btn_icon material_lst_del" onclick="deleteList(this)">
-                        <i class="ico_del white ico_24"></i>
-                      </button>
-                    </li>
-                  </ul>
-                  <div class="lst_plus_wrap">
-                    <button type="button" class="btn btn_md btn_border btn_icon mat_lst_plus" onclick="addList(this)">
-                      <i class="ico_add black ico_24"></i>
+              </div>
+            </li>
+            <li class="material_inner" th:each="entry : ${recipeForm.ingredientGroupMap}">
+              <div class="input_group input_area material_tit">
+                <input type="text" name="recipeEtc" class="input_text" th:value="${entry.key}" placeholder="재료 묶음 이름" />
+                <button type="button" class="btn btn_sm btn_secondary mat_innr_minus" onclick="deleteListWrap(this)">
+                  <i class="ico_del white ico_24"></i>재료/양념 묶음 삭제
+                </button>
+              </div>
+              <div class="material_lst_wrap">
+                <ul class="material_lst">
+                  <li th:each="ingredient : ${entry.value}">
+                    <input type="text" name="recipeEtcIngredient" class="input_text" th:value="${ingredient.ingredientName}" placeholder="예) 돼지고기" />
+                    <input type="text" name="recipeEtcQuantity" class="input_text" th:value="${ingredient.quantity}" placeholder="예) 300g" />
+                    <button type="button" class="btn btn_md btn_secondary btn_radius btn_icon material_lst_del" onclick="deleteList(this)">
+                      <i class="ico_del white ico_24"></i>
                     </button>
-                  </div>
+                  </li>
+                </ul>
+                <div class="lst_plus_wrap">
+                  <button type="button" class="btn btn_md btn_border btn_icon mat_lst_plus" onclick="addList(this)">
+                    <i class="ico_add black ico_24"></i>
+                  </button>
                 </div>
-              </li>
+              </div>
+            </li>
           </ul>
         </div>
         <div class="material_inner_plus">
@@ -109,6 +134,21 @@
       <div class="sub_card order_card">
         <h3>요리순서</h3>
         <ul class="step_lst">
+          <li th:if="${#lists.isEmpty(recipeForm.recipeContents)}" id="stepList0">
+            <p>Step<span class="stepTitNum">1</span></p>
+            <div class="input_writing_group input_area step_txt">
+              <textarea name="recipeContent" placeholder="내용을 입력해주세요."></textarea>
+            </div>
+            <div class="step_pic_wrap">
+              <input type="hidden" name="stepFileName" class="step_upload" accept="image/* multiple">
+              <img class="step_pic_add" onclick="clickImage(this)" th:src="@{/assets/images/add_pic.gif}" alt="step 이미지 추가">
+            </div>
+            <div class="del_btn_wrap">
+              <button type="button" class="btn btn_md btn_secondary btn_radius btn_icon material_lst_del" onclick="deleteList(this)">
+                <i class="ico_del white ico_24"></i>
+              </button>
+            </div>
+          </li>
           <li th:each="content, iterStat : ${recipeForm.recipeContents}" th:id="'stepList' + ${iterStat.index}">
             <p>Step<span class="stepTitNum" th:text="${iterStat.index + 1}">1</span></p>
             <div class="input_writing_group input_area step_txt">
