--- a/src/main/resources/templates/recipe/recipeForm.html
+++ b/src/main/resources/templates/recipe/recipeForm.html
@@ -46,7 +46,7 @@
             </li>
             <li>
 
-              <p class="cont_tit">요리시간</p>
+              <p class="cont_tit">요리정보</p>
               <div class="select_wrap cook_inf">
                 <div class="cook_inf_wrap">
                   <div class="select_box tbl_select_box">
@@ -68,8 +68,12 @@
           <div id="divMainPhotoUpload">
             <div id="divMainPhotoBox" class="img_upload_wrap" is_over="0">
               <!-- 여기서 어떻게 처리할 지 고민 -->
-              <input type="hidden" name="recipeFileName" style="display:none;">
-              <img id="preview" onclick="clickImage(this)"  th:src="@{/assets/images/pic_upload.gif}" style="cursor: pointer;" alt="이미지 업로드 사진" />
+              <input type="hidden" name="recipeFileName" th:value="${recipeForm.recipeFileName}" style="display:none;">
+              <img id="preview"
+                   onclick="clickImage(this)"
+                   th:src="${#strings.isEmpty(recipeForm.recipeFileName)} ? '/assets/images/pic_upload.gif' : '/upload/showImage?fileName=' + ${recipeForm.recipeFileName}"
+                   style="cursor: pointer;"
+                   alt="이미지 업로드 사진" />
             </div>
           </div>
         </div>
@@ -167,7 +171,7 @@
               <input type="hidden" name="stepFileName" th:value="${recipeForm.stepFileNames[iterStat.index]}" class="step_upload" accept="image/* multiple">
               <img class="step_pic_add" onclick="clickImage(this)" th:src="${#strings.isEmpty(recipeForm.stepFileNames[iterStat.index])} ?
                      '/assets/images/add_pic.gif' :
-                     '/showImage.do?fileName=' + ${recipeForm.stepFileNames[iterStat.index]}" alt="step 이미지 추가">
+                     '/upload/showImage?fileName=' + ${recipeForm.stepFileNames[iterStat.index]}" alt="step 이미지 추가">
             </div>
             <div class="del_btn_wrap">
               <button class="btn btn_md btn_secondary btn_radius btn_icon material_lst_del" onclick="deleteList(this);"><i class="ico_del white ico_24"></i></button>
