[spring boot] spring boot 기본 로그인 기능 되는지 확인 완료

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h2>관리자 로그인</h2>
-<form th:action="@{/login}" method="post">
+<form th:action="@{/loginProcess}" method="post">
   <div>
     <label>이메일:</label>
     <input type="text" name="username" />
