--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -3,7 +3,7 @@
 <body>
     <nav th:fragment="navigation" class="menu_lst" style="z-index:1;">
         <h1>
-            <a th:href="@{/}">ALAN 레시피</a>
+            <a th:href="@{/}">관리자 페이지</a>
         </h1>
         <dl>
             <dt class="depth1">레시피 관리</dt>
